# Shipment-Price-Prediction

./: .gitignore  app.py  demo.py  main.py  push_data.py  pyproject.toml  requirements.txt  template.py
config/: model.yaml
saved_models/: shipping_price_model.pkl
shipment/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
shipment/configuration/: mongo_operations.py
shipment/constants/: __init__.py
shipment/entity/: artifacts_entity.py  config_entity.py
shipment/pipline/: prediction_pipeline.py  training_pipeline.py
shipment/utils/: main_utils.py
templates/: index.html
