[project]
name = "shipment-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dill>=0.4.1",
    "evidently==0.2.8",
    "numpy<2.0",
    "pandas<2.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
]
