[project]
name = "shipment-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "evidently==0.2.8",
    "fastapi>=0.125.0",
    "jinja2>=3.1.6",
    "numpy<2.0",
    "pandas<2.0",
    "pymongo[srv]>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]
